# VitraePluginGI

./: CMakeLists.txt  README.md
include/VitraePluginGI/: Setup.hpp
include/VitraePluginGI/data/: Generation.hpp  Probe.hpp
include/VitraePluginGI/tasks/: ambientGI.hpp  giGeneration.hpp  giLighting.hpp  giTools.hpp  giUpdate.hpp  giVisualization.hpp
src/: Setup.cpp
src/data/: Generation.cpp  Probe.cpp
